@@ -1,11 +1,16 @@
 2017-11-27:
  - Change parser to fit with specifications 3.0.5
  - Add annotations: decision variables
+ - Add sum and alldif and expressions with expression (aka intension constraint instead of variables)
  - New callbacks:
      void beginAnnotations()
      void endAnnotations()
      void buildAnnotationDecision(vector<XVariable *> list)
      void buildConstraintOrdered(string id, vector<XVariable *> &list, vector<int> &lengths, OrderType order)
+     void buildConstraintAlldifferent(string id, vector<Tree *> &list)
+     void buildConstraintSum(string id, vector<Tree *> &trees, XCondition &cond)
+     void buildConstraintSum(string id, vector<Tree *> &trees, vector<int> & coeffs, XCondition &cond)
+
 
 2017-10-20:
  - Stop to use regex for primitive recognition
